--- a/client/src/components/Sidebar/Sidebar.css
+++ b/client/src/components/Sidebar/Sidebar.css
@@ -9,7 +9,7 @@
 	overflow-x: hidden;
 	overflow-y: auto;
 	background-color: #f5f5f5;
-	border-right: 1px solid #eee;
+	border-right: 1px solid black;
 }
 
 .sidebar-link {
