can add links to home page only and updates in home page

--- a/client/src/components/View/View.css
+++ b/client/src/components/View/View.css
@@ -42,3 +42,10 @@
 #show-none {
 	text-align: center;
 }
+
+#url-tag {
+	text-align: right;
+	border: none;
+	font-weight: bold;
+	font-size: 20px;
+}
