--- a/client/src/components/View/View.css
+++ b/client/src/components/View/View.css
@@ -49,3 +49,21 @@
 	font-weight: bold;
 	font-size: 20px;
 }
+
+#settings-list {
+	border: 1px solid black;
+	background: #e8e8e8;
+}
+
+#inner-settings-list {
+	margin-left: 10px;
+	margin-right: 10px;
+}
+
+.remove-url {
+	font-weight: bold;
+	float: right;
+	padding: 2px;
+	padding-left: 5px;
+	padding-right: 5px;
+}
