--- a/client/src/components/View/View.css
+++ b/client/src/components/View/View.css
@@ -2,7 +2,7 @@
 	border: 1px solid blue;
 	padding: 20px;
 	margin-right: 100px;
-	height: 900px;
+	/*height: 900px;*/
 	background: white;
 }
 
@@ -13,12 +13,13 @@
 }
 
 .link-block {
-	padding: 20px;
+	/*padding: 20px;*/
 	border: 1px solid orange;
-	height: 300px;
+	margin: auto;
+	/*height: 300px;*/
 	width: 300px;
 	margin-top: 40px;
-	margin-left: 50px;
+
 }
 
 .url-image {
@@ -28,7 +29,7 @@
 	display: block;
 	margin: auto;
 	text-align: center;
-	margin-top: 10px;
+	/*margin-top: 10px;*/
 	margin-bottom: 10px;
 }
 
@@ -50,12 +51,12 @@
 	font-size: 20px;
 }
 
-#settings-list {
+#settings-list, #cat-list {
 	border: 1px solid black;
 	background: #e8e8e8;
 }
 
-#inner-settings-list {
+#inner-settings-list, #inner-cat-list {
 	margin-left: 10px;
 	margin-right: 10px;
 }
@@ -68,7 +69,16 @@
 	padding-right: 5px;
 }
 
-#add-url {
+#add-url, #add-cat {
 	margin-top: 15px;
 	margin-bottom: 15px;
+}
+
+.url-cat-card {
+	display: block;
+	float: right;
+	border: 1px solid blue;
+	margin-right: 100px;
+	width: 100px;
+	text-align: center;
 }
