--- a/client/src/components/View/View.css
+++ b/client/src/components/View/View.css
@@ -54,7 +54,7 @@
 
 #settings-list, #cat-list {
 	border: 1px solid black;
-	background: #e8e8e8;
+	background: #636363;
 }
 
 #inner-settings-list, #inner-cat-list {
@@ -79,12 +79,45 @@
 	display: block;
 	float: right;
 	border: 1px solid blue;
-	margin-right: 100px;
+	margin-right: 20px;
 	width: 100px;
 	text-align: center;
 }
 
-#total-links {
+.array-total {
 	float: right;
 	margin-right: 15px;
+	background: white;
+	color: black;
+}
+
+.cat-overflow {
+	float: right;
+	display: block;
+	margin-right: 20px;
+}
+
+.save-btn {
+	float: right;
+	padding: 2px;
+	padding-left: 5px;
+	padding-right: 5px;
+	margin-right: 50px;
+}
+
+.url-cat-drop {
+	float: right;
+	width: 200px;
+	height: 30px;
+	margin-right: 25px;
+}
+
+.list-header, .list-header:focus {
+	color: white;
+	text-decoration: none;
+}
+
+.list-header:hover, .list-header:active {
+	text-decoration: none;
+	color: #e0e0e0;
 }
