--- a/client/src/components/Sidebar/Sidebar.css
+++ b/client/src/components/Sidebar/Sidebar.css
@@ -5,10 +5,10 @@
 	left: 0;
 	z-index: 1;
 	display: block;
-	padding: 20px;
+	padding-top: 20px;
 	overflow-x: hidden;
 	overflow-y: auto;
-	background-color: #f5f5f5;
+	background-color: #402e13;
 	border-right: 1px solid black;
 }
 
@@ -19,10 +19,19 @@
 	font-size: 24px;
 }
 
-#group-card {
-	border: 1px solid red;
-	width: 200px;
+.group-card {
+	border: 10px ridge brown;
+	width: 25rem;
 	margin-bottom: 20px;
+	background: #fff5e4;
+	color: #904747;
+	font-family: 'Chelsea Market', cursive;
+}
+
+.group-card-header {
+	border-bottom: 10px ridge brown;
+	font-size: 30px;
+	margin-bottom: 10px;
 }
 
 .card-header {
@@ -30,6 +39,56 @@
 	padding-bottom: 10px;
 }
 
-#setting-link {
+.setting-link {
 	font-size: 25px;
+	cursor: pointer;
+	font-family: 'Chelsea Market', cursive;
+	margin-bottom: 0px;
+}
+
+.cat-header {
+	margin: 0px;
+	font-size: 2rem;
+}
+
+.side-cat-list:hover {
+	background: #fff5e4;
+	color: black;
+	box-shadow: inset 0 0 5px #000000;
+}
+
+.side-cat-list {
+	padding: 0px;
+	cursor: pointer;
+	background: white;
+	border: none;
+}
+
+.setting-card {
+	border: 10px ridge brown;
+	width: 25rem;
+	background: #fff5e4;
+	color: #904747;
+	font-family: 'Chelsea Market', cursive;
+}
+
+#side-set-list {
+	margin-bottom: 0px;
+}
+
+#settings-btn:hover {
+	background: #fff5e4;
+	color: black;
+	box-shadow: inset 0 0 5px #000000;
+}
+
+#settings-btn {
+	padding: 0px;
+	color: #904747;
+	border: none;
+	background: white;
+}
+
+.start-cat {
+	border-bottom: 1px solid #dedede;
 }
