--- a/client/src/components/View/View.css
+++ b/client/src/components/View/View.css
@@ -1,8 +1,9 @@
 #main-view {
-	border: 1px solid blue;
+	border: 10px solid #402e13;
+	box-shadow: 5px 5px 5px #888888;
 	padding: 20px;
 	margin-right: 100px;
-	height: 800px;
+	height: 80rem;
 	overflow-y: scroll;
 	background: white;
 }
@@ -10,17 +11,21 @@
 .view-header {
 	text-align: center;
 	font-size: 50px;
-	border: 1px solid green;
+	box-shadow: 5px 5px 5px #888888;
+	border-top: 1px solid #dedede;
+	border-left: 1px solid #dedede;
 }
 
 .link-block {
-	/*padding: 20px;*/
-	border: 1px solid orange;
+	padding-bottom: 10px;
+	padding-top: 10px;
 	margin: auto;
 	/*height: 300px;*/
 	width: 300px;
 	margin-top: 40px;
-
+	box-shadow: 2px 2px 2px #888888;
+	border-top: 1px solid #dedede;
+	border-left: 1px solid #dedede;
 }
 
 .url-image {
@@ -36,9 +41,13 @@
 
 .url-link-block {
 	width: 200px;
-	border: 1px solid red;
+	/*border: 1px solid red;*/
 	text-align: center;
 	margin: auto;
+	box-shadow: 0 8px 6px -6px #000000;
+	border-left: 1px solid #dedede;
+	border-right: 1px solid #dedede;
+	border-top: 1px solid #dedede;
 }
 
 #show-none {
@@ -99,10 +108,8 @@
 
 .save-btn {
 	float: right;
-	padding: 2px;
-	padding-left: 5px;
-	padding-right: 5px;
 	margin-right: 50px;
+	margin-bottom: 20px;
 }
 
 .url-cat-drop {
@@ -120,4 +127,17 @@
 .list-header:hover, .list-header:active {
 	text-decoration: none;
 	color: #e0e0e0;
+}
+
+.cat-url-card {
+	float: right;
+	margin-right: 50px;
+	border-bottom: 1px solid black;
+	border-right: 1px solid black;
+	padding: 1px;
+	padding-right: 5px;
+	border-left: 1px solid #e6e6e6;
+	background: #636363;
+	color: white;
+	padding-left: 3px;
 }
