--- a/client/src/components/View/View.css
+++ b/client/src/components/View/View.css
@@ -44,13 +44,16 @@
 
 .url-link-block {
 	width: 200px;
-	/*border: 1px solid red;*/
+	overflow: hidden;
+	text-overflow: ellipsis;
 	text-align: center;
 	margin: auto;
 	box-shadow: 0 8px 6px -6px #000000;
 	border-left: 1px solid #dedede;
 	border-right: 1px solid #dedede;
 	border-top: 1px solid #dedede;
+	font-family: 'Mouse Memoirs', sans-serif;
+	font-size: 20px;
 }
 
 #show-none {
@@ -135,13 +138,9 @@
 .cat-url-card {
 	float: right;
 	margin-right: 50px;
-	border-bottom: 1px solid black;
 	border-right: 1px solid black;
 	padding: 1px;
-	padding-right: 5px;
-	border-left: 1px solid #e6e6e6;
-	background: #636363;
-	color: white;
+	padding-right: 50px;
 	padding-left: 3px;
 }
 
