--- a/client/src/components/Sidebar/Sidebar.css
+++ b/client/src/components/Sidebar/Sidebar.css
@@ -31,7 +31,6 @@
 .group-card-header {
 	background: #dedede;
 	font-size: 30px;
-	margin-bottom: 10px;
 }
 
 .setting-link {
@@ -44,6 +43,11 @@
 .cat-header {
 	margin: 0px;
 	font-size: 2rem;
+	color: #545454;
+}
+
+.cat-header:hover {
+	text-decoration: none;
 }
 
 .side-cat-list:hover {
