--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -1,6 +1,6 @@
 #title {
 	margin-top: 10px;
-	font-size: 50px;
+	font-size: 60px;
 	margin-left: 10px;
 }
 
@@ -19,6 +19,24 @@
 	left: 0;
 }
 
+.remember-check {
+	margin-left: 15px;
+}
+
+#checkbox-btn {
+	margin-right: 10px;
+}
+
+.modal-btn {
+	background: #000a8a;
+	color: white;
+}
+
+.modal-btn:hover, .modal-btn:active, .modal-btn:focus {
+	background: #3039b1;
+	color: white;
+}
+
 #title, #title:hover {
 	text-decoration: none;
 	cursor: pointer;
@@ -33,19 +51,23 @@
 .login-panel {
 	float: right;
 	height: 7.9rem;
-	border-left: 5px solid #ad581a;
-	border-right: 5px solid #ad581a;
 	border-radius: 5px;
 }
 
 #login-btn, #user-btn {
 	padding: 10px;
 	width: 200px;
-	font-size: 25px;
+	font-size: 40px;
 	height: 7.9rem;
-	background: #ad581a;
+	background: #000a8a;
+	color: white;
 	border: none;
 	border-radius: 0;
+	font-family: 'Boogaloo', cursive;
+}
+
+#login-btn:focus, #user-btn:focus {
+	outline: none;
 }
 
 .login-img {
