--- a/client/src/components/View/View.css
+++ b/client/src/components/View/View.css
@@ -6,7 +6,12 @@
 	height: 80rem;
 	overflow-y: auto;
 	background: white;
-	background: #c1f9ff;
+	background: #dafbff;
+}
+
+.add-btn {
+	background: #000a8a;
+	width: 8rem;
 }
 
 .view-header {
@@ -18,6 +23,18 @@
 	font-family: 'Chelsea Market', cursive;
 	color: #000a8a;
 	background: white;
+}
+
+.about-title {
+	font-size: 30px;
+	font-family: 'Chelsea Market', cursive;
+}
+
+.inner-info {
+	border: 1px solid grey;
+	margin-right: 10px;
+	margin-top: 10px;
+	margin-left: 10px;
 }
 
 .link-block {
@@ -211,10 +228,11 @@
 
 .no-login-view {
 	text-align: center;
-	margin: auto;
+	/*margin: auto;*/
+	font-size: 20px;
 	margin-top: 5rem;
 	height: 35rem;
-	width: 35rem;
+	/*width: 35rem;*/
 }
 
 .no-url-p {
